# FedAll

./: .gitignore  .pylintrc  FedAll.py  README.md  client_example_1.py  client_example_2.py  pyproject.toml  requirements.txt  server_example.py  train_data_1.csv  train_data_2.csv
.github/workflows/: pylint.yml
Client/: comp_part_client.py  model_train_client.py  tcp_sockets_client.py  training.py
Server/: comp_part_server.py  tcp_sockets_server.py
certificate/: server_certificate.crt
example/simple/: README.md  client_1.py  client_2.py  client_example_1.py  client_example_2.py  server.py  server_example.py  test_data.csv
example/simple/certificate/: command to generate self signed certificate.rtf  server_private_key.key
fedall/Client/: comp_part_client.py  data_split.py  data_transfer_client.py  model_train_client.py  tcp_sockets_client.py  training.py
fedall/Server/: comp_part_server.py  compute_loss_acc.py  data_transfer_server.py  ml_model.py  tcp_sockets_server.py
fedall/utils/: FedAll.py  fed_all.py
